changed test to use URIBuilder, fixed print, changed serverimpl to use sync instead of lock